--- a/single-repo.html
+++ b/single-repo.html
@@ -20,11 +20,14 @@
     </div>
     
   </header>
-  
   <main>
-  
+    <div id="issues-container" class="list-group">
+
+
+    </div>
   </main>
 
+<script src="./assets/css/js/single.js"></script>
 </body>
 
 </html>
